# notes-parser-time-entry

./: IMPLEMENTATION_SUMMARY.md  PIPELINE_README.md  gen-certs.sh  nats-server.conf  nats_generic_writer.py  run_pipeline_test.sh  test_pipeline.sh  test_tls_diagnostic.py  test_tls_enforcement.py
certs/: client.key  client.pem  rootCA.key  rootCA.pem  server.key  server.pem
nats/: test_mtls_setup.py
notes-parser-next-entry/: nats_next_listener.py  nats_writer.py
notes-parser-next-entry/nats/: __init__.py  nats_next_listener.py  nats_writer.py
notes-parser-time-entry/: .env.sample  Makefile  PIPELINE_README.md  pyproject.toml  tokens.yaml
notes-parser-time-entry/nats/: __init__.py  nats_writer.py
notes-parser-time-entry/schemas/: time_entry.schema.json
notes-parser-time-entry/src/: __init__.py  time_entry_parser.py
notes-parser-time-entry/tests/: __init__.py  test_time_entry_parser.py
notes-parser-time-entry/time_entry_notes_parser.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
time-entry-notes-parser/: nats_time_listener.py  nats_writer.py
time-entry-notes-parser/nats/: nats_time_listener.py
