[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "time-entry-notes-parser"
version = "0.1.0"
description = "Parse time entry notes from Google Keep"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Time Entry Parser Team"}
]
keywords = ["time-entry", "parser", "google-keep"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "nats-py>=2.6.0",
    "pyyaml>=6.0.1",
    "jsonschema>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
nats-time-listener = "nats_time_listener:main_sync"
nats-time-writer = "nats_writer:main_sync"

[tool.setuptools]
packages = ["src"]
package-dir = {"" = "."}

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers -v"
asyncio_mode = "auto"
